ADD_SUBDIRECTORY (rules)

ADD_CXXTEST(MOSESPLNSynergyUTest)
ADD_CXXTEST(PLNRulesIntegrationTest)

TARGET_LINK_LIBRARIES(MOSESPLNSynergyUTest
  ${ATOMSPACE_LIBRARIES}
  ${COGUTIL_LIBRARY}
)

TARGET_LINK_LIBRARIES(PLNRulesIntegrationTest
  ${URE_LIBRARIES}
  ${ATOMSPACE_LIBRARIES}
  ${COGUTIL_LIBRARY}
)
