ADD_SUBDIRECTORY (rules)

ADD_CXXTEST(MOSESPLNSynergyUTest)
ADD_CXXTEST(PLNUTest)
ADD_CXXTEST(TemporalReasoningUTest)

TARGET_LINK_LIBRARIES(MOSESPLNSynergyUTest
  ${ATOMSPACE_LIBRARIES}
  ${COGUTIL_LIBRARY}
)

TARGET_LINK_LIBRARIES(PLNUTest
  ${URE_LIBRARIES}
  ${ATOMSPACE_LIBRARIES}
  ${COGUTIL_LIBRARY}
)

TARGET_LINK_LIBRARIES(TemporalReasoningUTest
  ${URE_LIBRARIES}
  ${ATOMSPACE_LIBRARIES}
  ${COGUTIL_LIBRARY}
)
