# Boolean algebra rules
ADD_SUBDIRECTORY(propositional)

# Term logic rules
ADD_SUBDIRECTORY(term)

# Predicate logic rules
ADD_SUBDIRECTORY(predicate)

# Intensional reasoning rules
ADD_SUBDIRECTORY(intensional)

# Extensional reasoning rules
ADD_SUBDIRECTORY(extensional)

# Temporal reasoning rules
ADD_SUBDIRECTORY(temporal)

# Work in progress rules
ADD_SUBDIRECTORY(wip)
